@@ -6,16 +6,15 @@
 
 pkgname=cegui-toluapp
 pkgver=0.7.7
-pkgrel=1
+pkgrel=2
 pkgdesc="A free library providing windowing and widgets for graphics APIs/engines"
 arch=('i686' 'x86_64')
 url="http://crayzedsgui.sourceforge.net"
 license=("MIT")
-depends=('pcre' 'glew' 'libxml2' 'devil' 'lua' 'silly')
-makedepends=('python2' 'doxygen' 'ogre' 'irrlicht' 'gtk2' 'boost' 'graphviz' 'toluapp')
+depends=('pcre' 'glew' 'libxml2' 'devil' 'lua51' 'silly')
+makedepends=('python2' 'doxygen' 'ogre'  'gtk2' 'boost' 'graphviz' 'toluapp')
 optdepends=("python2: python bindings"
-            "ogre: ogre module"
-            "irrlicht: irrlicht module")
+            "ogre: ogre module")
 options=(!libtool)
 source=(http://downloads.sourceforge.net/crayzedsgui/CEGUI-${pkgver}.tar.gz)
 
