@@ -7,14 +7,14 @@
 pkgname=eclipse-emf
 pkgver=2.8.1
 _reldate=201209170436
-pkgrel=1
+pkgrel=2
 pkgdesc="EMF and XSD frameworks for the Eclipse platform"
 arch=('any')
 url="http://www.eclipse.org/modeling/emf/"
 license=('EPL')
 depends=('eclipse>=3.5')
 changelog=ChangeLog
-_mirror="http://www.eclipse.org/downloads/download.php?r=1&file="
+_mirror="http://www.eclipse.org/downloads/download.php?r=1&mirror_id=514&file="
 source=("$_mirror/modeling/emf/emf/downloads/drops/${pkgver}/R${_reldate}/emf-xsd-SDK-${pkgver}.zip")
 md5sums=('62d415f980ac0f246b503b12660b8b43')
 
