@@ -6,14 +6,14 @@
 pkgname=eclipse-gef
 pkgver=3.8.1
 _reldate=201208200205
-pkgrel=1
+pkgrel=2
 pkgdesc="GEF framework for the Eclipse platform"
 arch=('any')
 url="http://www.eclipse.org/gef/"
 license=('EPL')
 depends=('eclipse')
 changelog=ChangeLog
-_mirror="http://www.eclipse.org/downloads/download.php?r=1&file="
+_mirror="http://www.eclipse.org/downloads/download.php?r=1&mirror_id=514&file="
 source=("$_mirror/tools/gef/downloads/drops/${pkgver}/R${_reldate}/GEF-ALL-${pkgver}.zip")
 md5sums=('e9ab6af6ffb84f733ba1afa3b515f07e')
 
