@@ -98,6 +98,7 @@ build() {
     sed -i router/java/build.xml core/java/build.xml \
         -e 's|source="1.5"|source="1.6"|' -e 's|target="1.5"|target="1.6"|'
     source /etc/profile.d/apache-ant.sh
+    source /etc/profile.d/jdk.sh 2>/dev/null || source /etc/profile.d/openjdk6.sh
 
     ant preppkg-linux
     build_jbigi
