@@ -23,7 +23,9 @@ build() {
 
   # patch Makefile
   sed -i 's/^LIBS = .*$/& -ldl/' Makefile 
-  sed -i 's/#include "objcommon.h"/#include "config.h"\n&/' *.c
+
+  # define PACKAGE_VERSION to fix bfd.h error
+  sed -i "s/#include \"objcommon.h\"/#define PACKAGE_VERSION $pkgver\n&/" *.c
   make
 }
 
