@@ -10,7 +10,7 @@ _minor=7
 _basekernel=${_major}.${_minor}
 _srcname=linux-${_major}.${_minor}
 pkgbase=linux-pf
-_pfrel=3
+_pfrel=4
 _kernelname=-pf
 _pfpatchhome="http://pf.natalenko.name/sources/${_basekernel}/"
 _pfpatchname="patch-${_basekernel}.${_pfrel}${_kernelname}"
@@ -618,4 +618,4 @@ sha256sums=('60a64d0bf76eeec3355f115c577935757b84629c8c129ce5b8bb02075f6b9458'
             'b9d79ca33b0b51ff4f6976b7cd6dbb0b624ebf4fbf440222217f8ffc50445de4'
             'ec53a9c0ac4c8a7e47a4a42371b9b08bd769bd3fca3440e6afab852566750a8d'
             '8f2dad5b89dac8c76c3dd3ad902928d6032ec2c6ada41d873d752bad5586b154'
-            'ef74403103167902571589f1d4ebe2e0e8d8c1147b92923d31cbae03076d1c03')
+            'e3dcf9b2fde2b44ba2137d2520e6c5b465217c0093244eece1c752f435346d30')
