@@ -1,6 +1,6 @@
 # Maintainer: Rich Lindsley <richli.ff at gmail dot com>
 pkgname=pyresample
-pkgver=0.7.12
+pkgver=0.7.13
 pkgrel=1
 pkgdesc="Geospatial image resampling in Python"
 arch=('any')
@@ -9,9 +9,9 @@ license=('GPL3')
 depends=('python2-numpy' 'python2-pyproj' 'python2-configobj')
 options=(!emptydirs)
 source=(http://pyresample.googlecode.com/files/$pkgname-$pkgver.tar.gz)
-md5sums=('3b0d6888bb4ec2e7598f92c11d2f0bc9')
-sha1sums=('7f5033b5d02c6c1ae4ebbab3852acabf4b959d4c')
-sha256sums=('717f6239feeae81df1f3b4b7b71300f89394e04ce83cd0ffbfe3f44dd932257f')
+md5sums=('8e9ba53622c748e195bc142c16a6a744')
+sha1sums=('e832bca42092bc6272c871f0726df8b3e25fe52e')
+sha256sums=('c587221e723bcd9a872a40983d0b83612e68799e0f2bb68f8c93cf94e2245689')
 
 package() {
   cd "$srcdir/$pkgname-$pkgver"
