@@ -1,3 +1,6 @@
+2013-02-01  Stéphane Marguet (Stemp) <smarguet@gmail.com>
+	* Need mirror again, change it to Ialto ftp
+	  
 2012-09-29  Stéphane Marguet (Stemp) <smarguet@gmail.com>
 	* New upstream version 3.8.1
 	  
