@@ -1,3 +1,6 @@
+2013-02-01  Stéphane Marguet (Stemp) <smarguet@gmail.com>
+	* Need mirror again, change it to France ftp
+	  
 2012-10-03  scippio <scippio@berounet.cz>
 	* New upstream version
 	  
